--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   prefect-server:
     image: ghcr.io/olegpodlipalin/server_image:latest
+    pull_policy: always
     ports:
       - "80:4200"
     volumes:
@@ -24,6 +25,7 @@ services:
   
   prefect-deploy-flows:
     image: ghcr.io/olegpodlipalin/prefect_flows:latest
+    pull_policy: always
     command: ["prefect", "deploy", "--prefect-file", "prefect.yml", "--all"]
     volumes:
       - prefect:/root/.prefect
