change "docker-compose" for "docker compose"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           HOST_DIR_PATH: ${{ secrets.HOST_PATH }}
         run: |
           cd $GITHUB_WORKSPACE
-          docker-compose -f ./docker-compose.yml up -d
+          docker compose -f ./docker-compose.yml up -d
         
       - name: Clean up SSH key
         run: |
